manifests/manual/network-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: net-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: web
              topologyKey: kubernetes.io/hostname
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: net-test
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: net-test
  labels:
    app: client
spec:
  containers:
    - name: client
      image: busybox:1.36
      command:
        - sh
        - -c
        - sleep infinity
