manifests/manual/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: net-test
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
